# aibetexplorer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tasks.md  tech.md
app/: analysis.py  config_new.py  database.py  main.py  tofbc.py  utilbase.py  utils.py
app/betexplorer/: __init__.py  betexplorer.py  crud.py  models.py  schemas.py
app/fbcup/: __init__.py  analys_config.py  analysis.py  bet.py  bet_summary.py  forecast.py  forecast_summary.py  rating.py  statistic.py  tofbcup.py  utils.py
app/tests/: __init__.py  conftest.py  test_crud.py  test_database.py  test_parser.py
app/tests/download/betexplorer/football/england/fa-cup/: fixtures.http  fixtures_stage_8z4wQG6n.http  fixtures_stage_ED4ZQdit.http  results.http  results_stage_8z4wQG6n.http  results_stage_ED4ZQdit.http
app/tests/download/betexplorer/football/team/brighton/: 2XrRecc3.http
app/tests/download/betexplorer/football/team/wolves/: j3Azpf5d.http
